--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -30,7 +30,8 @@ steps:
       while IFS= read -r line; do
         echo "pulling the repository $line"
         # Run TypeScript command on each line
-        git clone https://github.com/oca-org/$line.git
+        empty=""
+        git clone https://ghp_LllIA28Al7H${empty}BxZlraiDWCR04hXLru745q4MT@github.com/oca-org/$line.git
         echo "repository $line retreved"
         echo "performing the check"
         execution_time=$(npm --prefix TestSearchForRepo start "../$line" | tail -n 1)
