--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -1,6 +1,6 @@
 version: 0.1
 component: build
-timeoutInSeconds: 28000
+timeoutInSeconds: 600000
 shell: bash
 
 steps:
@@ -31,7 +31,7 @@ steps:
         echo "pulling the repository $line"
         # Run TypeScript command on each line
         empty=""
-        git clone https://ghp_LllIA28Al7H${empty}BxZlraiDWCR04hXLru745q4MT@github.com/oca-org/$line.git
+        git clone https://ghp_LllIA28Al7H${empty}BxZlraiDWCR04hXLru745q4MT@github.com/oracle/$line.git
         echo "repository $line retreved"
         echo "performing the check"
         execution_time=$(npm --prefix TestSearchForRepo start "../$line" | tail -n 1)
