--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -9,6 +9,7 @@ steps:
     command: |
       npm --prefix TestSearchForRepo install
       pip3 install PyGithub
+      dnf install jq
   - type: Command
     name: "Get the repositories names"
     command: |
@@ -33,8 +34,9 @@ steps:
         empty=""
         git clone https://ghp_LllIA28Al7H${empty}BxZlraiDWCR04hXLru745q4MT@github.com/oracle/$line.git
         echo "repository $line retreved"
+        git checkout $(jq '."$line"' TestSearchForRepo/branchNames.json | tr -d '"')
         echo "performing the check"
-        execution_time=$(npm --prefix TestSearchForRepo start "../$line" $line| tail -n 1)
+        execution_time=$(npm --prefix TestSearchForRepo start "../$line" | tail -n 1)
         echo "$line: $execution_time" >> results.txt
         echo "check on $line completed"
         echo "remove repository $line"
