--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -34,7 +34,7 @@ steps:
         empty=""
         git clone https://ghp_LllIA28Al7H${empty}BxZlraiDWCR04hXLru745q4MT@github.com/oracle/$line.git
         echo "repository $line retreved"
-        git checkout $(jq .$line TestSearchForRepo/branchNames.json | tr -d '"')
+        git checkout $(jq --arg key $line '.[$key]' TestSearchForRepo/branchNames.json | tr -d '"')
         echo "performing the check"
         execution_time=$(npm --prefix TestSearchForRepo start "../$line" | tail -n 1)
         echo "$line: $execution_time" >> results.txt
