--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -35,8 +35,9 @@ steps:
         git clone https://ghp_LllIA28Al7H${empty}BxZlraiDWCR04hXLru745q4MT@github.com/oracle/$line.git
         echo "repository $line retreved"
         branch_name=$(jq --arg key $line '.[$key]' TestSearchForRepo/branchNames.json | tr -d '"')
-        git checkout -b $branch_name
-        git pull origin $branch_name
+        cd $line
+        git checkout $branch_name
+        cd ..
         echo "performing the check"
         execution_time=$(npm --prefix TestSearchForRepo start "../$line" | tail -n 1)
         echo "$line: $execution_time" >> results.txt
