--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -40,7 +40,7 @@ steps:
         rm -r .git
         cd ..
         echo "performing the check"
-        execution_time="repository size : $(du -sh $line), $(npm --prefix TestSearchForRepo start "../$line" | tail -n 1)"
+        execution_time="repository size : $(du -shk $line), $(npm --prefix TestSearchForRepo start "../$line" | tail -n 1)"
         echo "$line: $execution_time" >> results.txt
         echo "check on $line completed"
         echo "remove repository $line"
